--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Tinos:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+
+
+
 *,::after,::before{
     margin: 0;
     padding: 0;
@@ -105,3 +109,21 @@
 /* ------------------------------------- */
      /*Whatch's Styles */
 /* ------------------------------------- */
+.digital-watch{
+    margin: 0 auto;
+    width: 25rem;
+    height: 10rem;
+    padding: 1rem;
+    background-color: #26282B;
+}
+.watch{
+    font-family: 'Tinos', serif;
+    font-size: 2rem;
+}
+button{
+    padding: .5rem;
+    outline: none;
+    margin-top: 3.5rem;
+    background-color: #FF8B13;
+    border: 0;
+}
